--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,92 @@
+*
+{
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: #323D48;
+  min-height: 100vh;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 20vmin;
+  color: #ffd52d;
+  font-family: 'Pokemon Hollow', sans-serif;
+  padding: 3vmin;
 }
 
-.App-link {
-  color: #61dafb;
+.loading-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
+.pokeball {
+  width: 60px;
+  height: 60px;
+  background-color: #fff;
+  border-radius: 50% ;
+  position: relative;
+  overflow: hidden;
+  border: 3px solid;
+  animation: frames .8s  linear 0s infinite;
+}
+
+.pokeball:after{
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-color: red;
+  border-bottom: 4px solid;
+  top: -4px
+}
+
+.pokeball:before{
+  content: '';
+  position: absolute;
+  background-color: #fff;
+  width: 10px;
+  height: 10px;
+  border: 4px solid;
+  border-radius: 50%;
+  bottom: 18px;
+  right: 18px;
+  z-index: 1;
+}
+
+.classic-1 {
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 30px;
+  display: grid;
+}
+
+.classic-1:before,
+.classic-1:after {
+  content:"Loading...";
+  grid-area: 1/1;
+  -webkit-mask:linear-gradient(90deg,#000 50%,#0000 0) 0 50%/2ch 100%;
+  animation:c1 1s infinite cubic-bezier(0.5,220,0.5,-220);
+}
+.classic-1:after {
+  -webkit-mask-position:1ch 50%;
+}
+
+/* AnimationFrames */
+@keyframes c1 {100%{transform: translateY(calc(var(--s,1)*0.1%));}}
+@keyframes frames{
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100%{
     transform: rotate(360deg);
   }
 }
