--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -80,6 +80,14 @@
   -webkit-mask-position:1ch 50%;
 }
 
+.error-message {
+  font-family: 'David Sans', sans-serif;
+  font-size: 5vmin;
+  color: whitesmoke;
+  margin: 10vmin;
+  line-height: 1.3;
+}
+
 /* AnimationFrames */
 @keyframes c1 {100%{transform: translateY(calc(var(--s,1)*0.1%));}}
 @keyframes frames{
