--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,7 +11,7 @@
   min-height: 100vh;
 }
 
-.App-header {
+.App-header h1{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,64 +20,7 @@
   color: #ffd52d;
   font-family: 'Pokemon Hollow', sans-serif;
   padding: 3vmin;
-}
-
-.loading-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.pokeball {
-  width: 60px;
-  height: 60px;
-  background-color: #fff;
-  border-radius: 50% ;
-  position: relative;
-  overflow: hidden;
-  border: 3px solid;
-  animation: frames .8s  linear 0s infinite;
-}
-
-.pokeball:after{
-  content: '';
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  background-color: red;
-  border-bottom: 4px solid;
-  top: -4px
-}
-
-.pokeball:before{
-  content: '';
-  position: absolute;
-  background-color: #fff;
-  width: 10px;
-  height: 10px;
-  border: 4px solid;
-  border-radius: 50%;
-  bottom: 18px;
-  right: 18px;
-  z-index: 1;
-}
-
-.classic-1 {
-  font-weight: bold;
-  font-family: monospace;
-  font-size: 30px;
-  display: grid;
-}
-
-.classic-1:before,
-.classic-1:after {
-  content:"Loading...";
-  grid-area: 1/1;
-  -webkit-mask:linear-gradient(90deg,#000 50%,#0000 0) 0 50%/2ch 100%;
-  animation:c1 1s infinite cubic-bezier(0.5,220,0.5,-220);
-}
-.classic-1:after {
-  -webkit-mask-position:1ch 50%;
+  margin: 0;
 }
 
 .error-message {
