--- a/frontend/src/components/SearchBar/index.css
+++ b/frontend/src/components/SearchBar/index.css
@@ -1,7 +1,7 @@
 .searchBar {
   display: block;
   width: 50vw;
-  min-height: 5vh;
+  min-height: 6vmin;
   border-radius: 10px;
   padding: 0 20px;
   font-size: 3vmin;
